--- a/index.html
+++ b/index.html
@@ -1,12 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/86189ed851.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Demo</h1>
-</body>
+  </head>
+  <body>
+    <!-- ---navbar---- -->
+    <div id="fixed-navbar">
+    <nav class="navbar" >
+      <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
+      <ul class="navbar-list">
+        <li class="navbar-list-item"><a href="index.html">Home</a></li>
+        <li class="navbar-list-item icons">
+          <a href="./component.html">Documentation</a>
+        </li>
+        <li class="navbar-list-item">
+          <a href="https://github.com/yashodaAgarwal">
+            <i class="fab fa-github icons"></i>
+          </a>
+        </li>
+
+        <li class="navbar-list-item">
+          <a href="https://www.linkedin.com/in/yashoda-agarwal-74994b18b">
+            <i class="fab fa-linkedin icons"></i>
+          </a>
+        </li>
+        <li class="navbar-list-item">
+          <a href="https://twitter.com/agarwal_yashoda?s=11">
+            <i class="fab fa-twitter icons"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+    <!-- ----Hero Section---- -->
+
+    <section class="main-section">
+      <div class="main-section-container">
+        <div class="left-main-section-container">
+          <h1 class="title">USE & CREATE</h1>
+          <h3 class="sub-title">
+            Quickly design and customize your website using the UI, designed to
+            work best with the components and documentation.
+          </h3>
+          <div class="btn-wrapper">
+            <a href="./component.html" class="btn btn-primary">Get Started</a>
+            <a href="./component.html" class="btn btn-secondary"
+              >Installation</a
+            >
+          </div>
+        </div>
+        <div class="right-main-section-container">
+          <img
+            class="image"
+            src="./asset/image.png"
+            height="500px"
+            width="500px"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- ---- Footer section ---- -->
+
+    <section class="footer">
+      <h4>Made by <i class="fas fa-code"></i> Yashoda Agarwal</h4>
+      <a href="https://github.com/yashodaAgarwal"
+        ><i class="footer-icons fab fa-github icons"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/yashoda-agarwal-74994b18b"
+        ><i class="footer-icons fab fa-linkedin"></i
+      ></a>
+      <a href="https://twitter.com/agarwal_yashoda?s=11"
+        ><i class="footer-icons fab fa-twitter"></i
+      ></a>
+    </section>
+  </body>
 </html>
