--- a/component.html
+++ b/component.html
@@ -14,24 +14,26 @@
   <body>
     <!-- ---navbar---- -->
 
-    <nav class="navbar">
+    <nav class="navbar" >
       <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
       <ul class="navbar-list">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
-        <li class="navbar-list-item icons"><a href="#">Documentation</a></li>
+        <li class="navbar-list-item icons">
+          <a href="./component.html">Documentation</a>
+        </li>
         <li class="navbar-list-item">
-          <a href="#">
+          <a href="https://github.com/yashodaAgarwal">
             <i class="fab fa-github icons"></i>
           </a>
         </li>
 
         <li class="navbar-list-item">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/yashoda-agarwal-74994b18b">
             <i class="fab fa-linkedin icons"></i>
           </a>
         </li>
         <li class="navbar-list-item">
-          <a href="#">
+          <a href="https://twitter.com/agarwal_yashoda?s=11">
             <i class="fab fa-twitter icons"></i>
           </a>
         </li>
@@ -141,9 +143,15 @@
 
     <section class="footer">
       <h4>Made by <i class="fas fa-code"></i> Yashoda Agarwal</h4>
-      <a href=""><i class="footer-icons fab fa-github icons"></i></a>
-      <a href=""><i class="footer-icons fab fa-linkedin"></i></a>
-      <a href=""><i class="footer-icons fab fa-twitter"></i></a>
+      <a href="https://github.com/yashodaAgarwal"
+        ><i class="footer-icons fab fa-github icons"></i
+      ></a>
+      <a href="https://www.linkedin.com/in/yashoda-agarwal-74994b18b"
+        ><i class="footer-icons fab fa-linkedin"></i
+      ></a>
+      <a href="https://twitter.com/agarwal_yashoda?s=11"
+        ><i class="footer-icons fab fa-twitter"></i
+      ></a>
     </section>
   </body>
 </html>
