Style : Changed Image

--- a/component.html
+++ b/component.html
@@ -120,20 +120,15 @@
         close button.
       </p>
       <div class="alert-items">
-        <div class="alert-items alert-primary">
-          A primary alert example with a text link
-        </div>
-        <div class="alert-items alert-secondary">
-          A secondary alert example!!!!
-        </div>
-        <div class="alert-items alert-success">A success alert example!!!!</div>
-        <div class="alert-items alert-danger">A danger alert example!!!!</div>
-        <div class="alert-items alert-warning">A alert alert example!!!!</div>
+        <div class="alert-items alert-primary"><i class="fas fa-info-circle alert-icon"></i>A primary alert example!!!</div>
+        <div class="alert-items alert-success "><i class="fas fa-check-circle alert-icon"></i>A success alert example!!!!</div>
+        <div class="alert-items alert-danger "><i class="fas fa-exclamation-triangle alert-icon"></i>A danger alert example!!!!</div>
+        <div class="alert-items alert-warning "><i class="fas fa-times-circle alert-icon"></i>A alert alert example!!!!</div>
       </div>
 
       <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%250A%2520%253Cdiv%2520class%253D%2522alert-items%2520alert-primary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520A%2520primary%2520alert%2520example%2520with%2520a%2520text%2520link%250A%2520%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522alert-items%2520alert-secondary%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520A%2520secondary%2520alert%2520example%21%21%21%21%250A%2520%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522alert-items%2520alert-success%2522%253EA%2520success%2520alert%2520example%21%21%21%21%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522alert-items%2520alert-danger%2522%253EA%2520danger%2520alert%2520example%21%21%21%21%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522alert-items%2520alert-warning%2522%253EA%2520alert%2520alert%2520example%21%21%21%21%253C%252Fdiv%253E%250A"
-  style="width: 100%; height: 342px; border:0; transform: scale(1); overflow:hidden;"
+  src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=46px&ph=49px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%250A%253Cdiv%2520class%253D%2522alert-items%2520alert-primary%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-info-circle%2520alert-icon%2522%253E%253C%252Fi%253EA%2520primary%2520alert%2520example%21%21%21%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert-items%2520alert-success%2520%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-check-circle%2520alert-icon%2522%253E%253C%252Fi%253EA%2520success%2520alert%2520example%21%21%21%21%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert-items%2520alert-danger%2520%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-exclamation-triangle%2520alert-icon%2522%253E%253C%252Fi%253EA%2520danger%2520alert%2520example%21%21%21%21%250A%253C%252Fdiv%253E%250A%253Cdiv%2520class%253D%2522alert-items%2520alert-warning%2520%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-times-circle%2520alert-icon%2522%253E%253C%252Fi%253EA%2520alert%2520alert%2520example%21%21%21%21%250A%253C%252Fdiv%253E%250A"
+  style="width: 100%; height: 395px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
       </iframe>
