--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="right-main-section-container">
           <img
             class="image"
-            src="./asset/image.png"
+            src="Asset/background.png"
             height="500px"
             width="500px"
             alt=""
