Style : updated css

--- a/component.html
+++ b/component.html
@@ -14,9 +14,9 @@
   <body>
     <!-- ---navbar---- -->
 
-    <nav class="navbar" >
+    <nav class="navbar flex flex-wrap" >
       <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
-      <ul class="navbar-list">
+      <ul class="navbar-list flex">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
         <li class="navbar-list-item icons">
           <a href="./component.html">Documentation</a>
@@ -92,9 +92,9 @@
       </p>
       <div class="avatar-items">
         <img src="./Asset/kitty.png" alt="" class="kitty avatar-xl" />
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-l" />
+        <img src="./Asset/kitty.png" alt="" class="kitty avatar-lg" />
         <img src="./Asset/kitty.png" alt="" class="kitty avatar-md" />
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-s" />
+        <img src="./Asset/kitty.png" alt="" class="kitty avatar-sm" />
       </div>
 
       <iframe
