--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <!-- ---navbar---- -->
   
-    <nav class="navbar" >
+    <nav class="navbar flex flex-wrap" >
       <a href="index.html" class="Logo" href="#"><strong>YASHODA</strong></a>
-      <ul class="navbar-list">
+      <ul class="navbar-list flex">
         <li class="navbar-list-item"><a href="index.html">Home</a></li>
         <li class="navbar-list-item icons">
           <a href="./component.html">Documentation</a>
@@ -44,7 +44,7 @@
 
     <section class="main-section">
       <div class="main-section-container">
-        <div class="left-main-section-container">
+        <div class="left-main-section-container flex">
           <h1 class="title">USE & CREATE</h1>
           <h3 class="sub-title">
             Quickly design and customize your website using the UI, designed to
@@ -61,8 +61,7 @@
           <img
             class="image"
             src="Asset/background.png"
-            height="500px"
-            width="500px"
+          
             alt=""
           />
         </div>
