--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             work best with the components and documentation.
           </h3>
           <div class="btn-wrapper">
-            <a href="./component.html" class="btn btn-primary">Get Started</a>
-            <a href="./component.html" class="btn btn-secondary"
+            <a href="./component.html" class="btn btn-use">Get Started</a>
+            <a href="./component.html" class="btn btn-docs"
               >Installation</a
             >
           </div>
