style : updated css property

--- a/component.html
+++ b/component.html
@@ -61,7 +61,7 @@
           </a>
         </li>
         <li>
-          <a href="buttons">
+          <a href="#buttons">
             <span>Button</span>
           </a>
         </li>
@@ -148,15 +148,15 @@
         To show cart or notification count, you can use number badge. Check code below to copy the html part as is.
       </p>
       <div class="badge-items flex">
-        <button type="button" class="badge-button flex center badge-xl">
+        <button  class="badge-button flex center badge-xl">
           <i class="fas fa-bell fa-4x"></i>
           <span class="icon-button-badge flex center icon-xl">2</span>
         </button>
-        <button type="button" class="badge-button flex center badge-lg">
+        <button  class="badge-button flex center badge-lg">
           <i class="fas fa-envelope fa-3x"></i>
           <span class="icon-button-badge flex center icon-l">2</span>
         </button>
-        <button type="button" class="badge-button flex center badge-md">
+        <button  class="badge-button flex center badge-md">
           <i class="fab fa-whatsapp fa-2x"></i>
           <span class="icon-button-badge flex center icon-md">2</span>
         </button>
@@ -174,19 +174,19 @@
       </p>
 
       <div class="badge-items flex">
-        <div class="badge-avatar flex  badge-xl">
+        <div class="badge-avatar flex badge-xl">
           <img src="./Asset/kitty.png" alt="" class="kitty avatar-xl" /><span
-            class="icon-avatar-badge flex icon-l"
+            class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
         <div class="badge-avatar flex badge-xl">
           <img src="./Asset/kitty.png" alt="" class="kitty avatar-lg" /><span
-            class="icon-avatar-badge flex icon-l"
+            class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
         <div class="badge-avatar flex badge-xl">
           <img src="./Asset/kitty.png" alt="" class="kitty avatar-md" /><span
-            class="icon-avatar-badge flex icon-l"
+            class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
       </div>
@@ -209,12 +209,10 @@
       </p>
 
       <div class="button-items">
-        <p>
-          <button class="btn btn-primary btn-round-1">Primary</button>
-          <button class="btn btn-success btn-round-1">Success</button>
-          <button class="btn btn-warning btn-round-1">Warning</button>
-          <button class="btn btn-danger btn-round-1">Danger</button>
-        </p>
+          <button class="btn btn-primary btn-round">Primary</button>
+          <button class="btn btn-success btn-round">Success</button>
+          <button class="btn btn-warning btn-round">Warning</button>
+          <button class="btn btn-danger btn-round">Danger</button>
       </div>
       <iframe
   src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=37px&ph=42px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%2520%253Cbutton%2520class%253D%2522btn%2520btn-primary%2520btn-round-1%2522%253EPrimary%253C%252Fbutton%253E%250A%2520%253Cbutton%2520class%253D%2522btn%2520btn-success%2520btn-round-1%2522%253ESuccess%253C%252Fbutton%253E%250A%2520%253Cbutton%2520class%253D%2522btn%2520btn-warning%2520btn-round-1%2522%253EWarning%253C%252Fbutton%253E%250A%2520%253Cbutton%2520class%253D%2522btn%2520btn-danger%2520btn-round-1%2522%253EDanger%253C%252Fbutton%253E%250A%2520%2520%250A"
@@ -228,12 +226,10 @@
       </p>
 
       <div class="button-items">
-        <p>
-          <a href="#" class="btn btn-primary btn-round-1">Primary</a>
-          <a href="#" class="btn btn-success btn-round-1">Success</a>
-          <a href="#" class="btn btn-warning btn-round-1">Warning</a>
-          <a href="#"  class="btn btn-danger btn-round-1">Danger</a>
-        </p>
+          <a href="#" class="btn btn-primary btn-round">Primary</a>
+          <a href="#" class="btn btn-success btn-round">Success</a>
+          <a href="#" class="btn btn-warning btn-round">Warning</a>
+          <a href="#"  class="btn btn-danger btn-round">Danger</a>
       </div>
       <iframe
   src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=37px&ph=42px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520btn-primary%2520btn-round-1%2522%253EPrimary%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520btn-success%2520btn-round-1%2522%253ESuccess%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520btn-warning%2520btn-round-1%2522%253EWarning%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520%2520class%253D%2522btn%2520btn-danger%2520btn-round-1%2522%253EDanger%253C%252Fa%253E%250A%2520%2520%250A"
@@ -247,13 +243,11 @@
       </p>
 
       <div class="button-items">
-        <p>
           <a href="#" class="btn icon-button"><i class="fas fa-shopping-cart fa-lg"></i></a>
           <a href="#" class="btn icon-button"><i class="fas fa-trash fa-lg"></i></a>
           <a href="#" class="btn icon-button"><i class="fas fa-times fa-lg"></i></a>
           <a href="#"  class="btn icon-button"><i class="fas fa-share-alt fa-lg"></i></a>
           <a href="#"  class="btn icon-button"> <i class="fas fa-bell fa-lg"></i> </a>
-        </p>
       </div>
       <iframe
   src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=37px&ph=42px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520icon-button%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-shopping-cart%2520fa-lg%2522%253E%253C%252Fi%253E%250A%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520icon-button%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-trash%2520fa-lg%2522%253E%253C%252Fi%253E%250A%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522btn%2520icon-button%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-times%2520fa-lg%2522%253E%253C%252Fi%253E%250A%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520%2520class%253D%2522btn%2520icon-button%2522%253E%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-share-alt%2520fa-lg%2522%253E%253C%252Fi%253E%250A%253C%252Fa%253E%250A%253Ca%2520href%253D%2522%2523%2522%2520%2520class%253D%2522btn%2520icon-button%2522%253E%2520%250A%2520%2520%253Ci%2520class%253D%2522fas%2520fa-bell%2520fa-lg%2522%253E%253C%252Fi%253E%2520%250A%253C%252Fa%253E%250A%2520%2520%250A"
