styles: updated css

--- a/component.html
+++ b/component.html
@@ -154,7 +154,7 @@
         </button>
         <button  class="badge-button flex center badge-lg">
           <i class="fas fa-envelope fa-3x"></i>
-          <span class="icon-button-badge flex center icon-l">2</span>
+          <span class="icon-button-badge flex center icon-lg">2</span>
         </button>
         <button  class="badge-button flex center badge-md">
           <i class="fab fa-whatsapp fa-2x"></i>
