--- a/component.html
+++ b/component.html
@@ -127,10 +127,10 @@
         a graphical representation of a user or the user's character or persona.
       </p>
       <div class="avatar-items">
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-xl" />
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-lg" />
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-md" />
-        <img src="./Asset/kitty.png" alt="" class="kitty avatar-sm" />
+        <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-xl" />
+        <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-lg" />
+        <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-md" />
+        <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-sm" />
       </div>
 
       <iframe
@@ -210,17 +210,17 @@
 
       <div class="badge-items flex">
         <div class="badge-avatar flex badge-xl">
-          <img src="./Asset/kitty.png" alt="" class="kitty avatar-xl" /><span
+          <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-xl" /><span
             class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
         <div class="badge-avatar flex badge-xl">
-          <img src="./Asset/kitty.png" alt="" class="kitty avatar-lg" /><span
+          <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-lg" /><span
             class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
         <div class="badge-avatar flex badge-xl">
-          <img src="./Asset/kitty.png" alt="" class="kitty avatar-md" /><span
+          <img src="./Asset/kitty.png" alt="kitty" class="kitty avatar-md" /><span
             class="icon-avatar-badge flex icon-lg"
           ></span>
         </div>
@@ -317,7 +317,7 @@
       </p>
 
       <div class="image-items">
-        <img class="img-fluid" src="../asset/image.jpg" alt="">
+        <img class="img-fluid" src="../asset/image.jpg" alt="Image">
       </div>
       <iframe
       src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=680&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=19px&ph=29px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522img-fluid%2522%2520src%253D%2522..%252Fasset%252Fimage.jpg%2522%2520alt%253D%2522%2522%253E%2520%2520%2520%2520%2520%2520%250A"
@@ -331,7 +331,7 @@
       </p>
 
       <div class="image-items">
-        <img class="img-round" src="../asset/image.jpg" alt="">
+        <img class="img-round" src="../asset/image.jpg" alt="Image">
       </div>
       <iframe
   src="https://carbon.now.sh/embed?bg=rgba%28248%2C192%2C200%2C0.94%29&t=base16-light&wt=none&l=htmlmixed&width=566.5&ds=false&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=19px&ph=29px&ln=false&fl=1&fm=Droid+Sans+Mono&fs=13.5px&lh=130%25&si=false&es=2x&wm=false&code=%253Cimg%2520class%253D%2522img-round%2522%2520src%253D%2522..%252Fasset%252Fimage.jpg%2522%2520alt%253D%2522%2522%253E%2520%2520%2520%2520%2520%250A"
