update : changed px values to rem

--- a/component.html
+++ b/component.html
@@ -121,7 +121,7 @@
     <!-- ----- avatar ----- -->
 
     <section class="main-title" id="avatars">
-      <h3 class="avatar-heading">Avatar</h3>
+      <h3 class="component-heading">Avatar</h3>
       <p class="component-navbar-item">
         In computing, an avatar (also known as a profile picture or userpic) is
         a graphical representation of a user or the user's character or persona.
@@ -150,7 +150,7 @@
     <!-- ---- alert ---- -->
 
     <section class="main-title" id="alerts">
-      <h3 class="avatar-heading">Alert</h3>
+      <h3 class="component-heading">Alert</h3>
       <p class="component-navbar-item">
         Alerts are available for any length of text, as well as an optional
         close button.
@@ -174,11 +174,11 @@
     <!-- ---- Badges----  -->
 
     <section class="main-title" id="badges">
-      <h2 class="avatar-heading">Badges</h2>
+      <h2 class="component-heading">Badges</h2>
       <p class="component-navbar-item">
         Badges are used to highlight an item's status for quick recognition.Badges scale to match the size of the immediate parent element by using relative font sizing and rem units.
       </p>
-      <h3 class="avatar-heading">Badge with Icons</h3>
+      <h3 class="component-heading">Badge with Icons</h3>
       <p class="component-navbar-item">
         To show cart or notification count, you can use number badge. Check code below to copy the html part as is.
       </p>
@@ -203,7 +203,7 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
       
-      <h3 class="avatar-heading">Badge with avatar</h3>
+      <h3 class="component-heading">Badge with avatar</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -236,9 +236,9 @@
     <!-- --- Button ---- -->
 
     <section class="main-title" id="buttons">
-      <h2 class="avatar-heading">Button</h2>
+      <h2 class="component-heading">Button</h2>
       <p class="component-navbar-item">Buttons are also called as call to action. We have range of buttons and their states. You may use a tag or button element, you need to add respective classes, and you are good to go.</p>
-      <h3 class="avatar-heading">Primary Button</h3>
+      <h3 class="component-heading">Primary Button</h3>
       <p class="component-navbar-item"> 
         Whenever you want your user to click on a link or button, use primary style buttons.  
       </p>
@@ -255,7 +255,7 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
 
-      <h3 class="avatar-heading">Link Button</h3>
+      <h3 class="component-heading">Link Button</h3>
       <p class="component-navbar-item">
         Whenever you want your user to click on a link , use link style buttons.  
       </p>
@@ -272,7 +272,7 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
 
-      <h3 class="avatar-heading">Icon Button</h3>
+      <h3 class="component-heading">Icon Button</h3>
       <p class="component-navbar-item">
         Whenever you want your user to click on a icon, use icon style buttons.  
       </p>
@@ -289,7 +289,7 @@
   style="width: 100%; height: 250px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-      <h3 class="avatar-heading">Floating action Button</h3>
+      <h3 class="component-heading">Floating action Button</h3>
       <p class="component-navbar-item">
         Whenever you want a  floating button, use Floating action buttons.  
       </p>
@@ -308,11 +308,11 @@
     <!-- --- Card ---  -->
 
     <section class="main-title" id="cards">
-      <h2 class="avatar-heading">Cards</h2>
+      <h2 class="component-heading">Cards</h2>
       <p class="component-navbar-item">
         Card are used to show user related data collectively, like product details.
       </p>
-      <h3 class="avatar-heading">Cards with badges</h3>
+      <h3 class="component-heading">Cards with badges</h3>
       <p class="component-navbar-item">
         To show cart or notification count, you can use number badge. Check code below to copy the html part as is.
       </p>
@@ -336,7 +336,7 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
       
-      <h3 class="avatar-heading">Cards with dismiss</h3>
+      <h3 class="component-heading">Cards with dismiss</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -360,7 +360,7 @@
   sandbox="allow-scripts allow-same-origin">
 </iframe>
     </iframe>
-<h3 class="avatar-heading">Cards with text overlay</h3>
+<h3 class="component-heading">Cards with text overlay</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -386,7 +386,7 @@
   style="width: 100%; height: 414px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-<h3 class="avatar-heading">Text only cards</h3>
+<h3 class="component-heading">Text only cards</h3>
       <p clabss="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -406,7 +406,7 @@
   style="width: 100%; height: 308px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-<h3 class="avatar-heading">Vertical/Horizontal cards</h3>
+<h3 class="component-heading">Vertical/Horizontal cards</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -430,7 +430,7 @@
   style="width: 100%; height: 361px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-<h3 class="avatar-heading">Cards with shadow</h3>
+<h3 class="component-heading">Cards with shadow</h3>
       <p class="component-navbar-item">
         Badges can be integrated with Avatars by showing colors to show the online status of user. 
       </p>
@@ -458,9 +458,9 @@
     <!-- ---- Images ----  -->
 
     <section class="main-title" id="images">
-      <h2 class="avatar-heading" >Images</h2>
+      <h2 class="component-heading" >Images</h2>
       <p class="component-navbar-item">Images can be responsive to fit the parent's width, and also can be customised to be round shaped</p>
-      <h3 class="avatar-heading">Responsive Images</h3>
+      <h3 class="component-heading">Responsive Images</h3>
       <p class="component-navbar-item">
         You can add class img-fluid to make your image fit the width of container. It's height will get adjusted by keeping the aspect ratio same. If you want to change the aspect ratio, you will have to crop the image.
       </p>
@@ -474,7 +474,7 @@
       sandbox="allow-scripts allow-same-origin">
     </iframe>
 
-      <h3 class="avatar-heading">Rounded Images</h3>
+      <h3 class="component-heading">Rounded Images</h3>
       <p class="component-navbar-item">
         You can add class img-round to make your image round shaped.
       </p>
@@ -493,9 +493,9 @@
     <!-- ---Input ---  -->
 
     <section class="main-title" id="Inputs">
-      <h2 class="avatar-heading" >Input</h2>
+      <h2 class="component-heading" >Input</h2>
       <p class="component-navbar-item">There are Input fields listed below and Input validation is also styled.</p>
-        <h3 class="avatar-heading">Text Box</h3>
+        <h3 class="component-heading">Text Box</h3>
       <div class="image-items">
         <input
           type="text"
@@ -509,7 +509,7 @@
   style="width: 100%; height: 219px; border:0; transform: scale(1); overflow:hidden;"
   sandbox="allow-scripts allow-same-origin">
 </iframe>
-        <h2 class="avatar-heading" >Input with validation and errors style</h2>
+        <h2 class="component-heading" >Input with validation and errors style</h2>
       <p class="component-navbar-item"></p>
       <div class="input-items"> 
         <h5 class="space">1. Required field (Display error if Submitted blank)</h5>
@@ -553,7 +553,7 @@
     <!-- --- Typography ---  -->
 
     <section class="main-title" id="typography">
-      <h2 class="avatar-heading" >Typography</h2>
+      <h2 class="component-heading" >Typography</h2>
       <p class="component-navbar-item">Check out below text utilities.For heading u can use h1, h2, h3, h4, h5, h6 elements. The same font-styling is present for class names h1, h2, h3, h4, h5, h6 class. 
         You can add one of these classes to style the text.</p>
       <div class="Typo-items">
@@ -580,7 +580,7 @@
 
     <!-- --- Navbar ---  -->
     <section class="main-title" id="navigation">
-      <h2 class="avatar-heading" >Navigation</h2>
+      <h2 class="component-heading" >Navigation</h2>
       <p class="component-navbar-item">Navigation bar is used to navigate through the web apps or websites. This navigation component is responsive. 
         It is a hamburger menu in medium and small devices.</p>
       <div class="navigation-item">
